# UGATU_lab_work_5

./: CMakeLists.txt  main.cpp
